# potential-chainsaw

./: Cargo.toml  README.md  build.rs  rust-toolchain.toml
.github/workflows/: rust.yml
src/: ble.rs  bq27xx.rs  common.rs  control.rs  gatt.rs  main.rs  power.rs
src/control/: interface.rs  mod.rs
src/control/ble/: ble.rs  gatt.rs  mod.rs
src/sensors/: bq27xx.rs  mod.rs
